fixed alignment in aboutus page

--- a/styles/aboutus.css
+++ b/styles/aboutus.css
@@ -1,5 +1,5 @@
-body {
-    padding: 0;
+#aboutus-page{
+margin-bottom: 150px;
 }
 
 h1 {
